# LentaTeamConfidence

./: .gitignore  DEPLOY.md  README.md  app.py  pyproject.toml  requirements-autolabel.txt  requirements.txt
config/: default.yaml  patterns.yaml
dataset/annotations/: instances_train.json  instances_val.json
docs/: ARCHITECTURE.md  presentation.html  presentation.md  presentation_prompt.md
notebooks/: train_detector_colab.ipynb
scripts/: autolabel.py  build_gt_dataset.py  download_weights.sh  make_pdf.py  run_pipeline.sh  self_eval.py  train_detector.py
scripts/evidence/: _ceiling_metric.py  _crop_gt.py  _decode_ceiling.py  _diag.py  _diag2.py  _diag_ocr.py  _eval_detector.py  _inspect.py  _ocr_bestcase.py  _qr_visual_map.py  _test_fusion.py  _test_superres.py  _verify_frame.py  _wechat_ceiling.py
src/lenta/: cli.py  config.py  pipeline.py  schema.py  types.py
src/lenta/aggregate/: dedup.py  tag_track.py
src/lenta/assemble/: color_detect.py  fields.py  reconcile.py
src/lenta/decode/: code_reader.py  qr_parser.py
src/lenta/detect/: color_detector.py  detector.py  zeroshot.py
src/lenta/io/: csv_writer.py  video_reader.py
src/lenta/ocr/: engine.py
src/lenta/preprocess/: deskew.py  fusion.py  geometry.py  superres.py
src/lenta/track/: linker.py
tests/: test_core.py
